# AoC25

./: .gitignore  README.md
Day01/: CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp
Day01/tests/: test_main.cpp
Day02/: README.md  functions.cpp  functions.h  main.cpp
Day03/: README.md  main.cpp
Day04/: README.md  main.cpp
Day05/: README.md  main.cpp
Day06/: README.md  main.cpp
Day07/: README.md  functions.h  main.cpp
Day08/: functions.cpp  functions.h  main.cpp
Day09/: README.md  main.cpp
Day11/: CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp
